# authentication

./: .env.compose.example  .env.example  .env.postgres.example  .gitignore  .local.env.example  CHANGELOG.md  Dockerfile  INSTALLATION_PLAN.md  NOTICE  OPERATIONS.md  OPS-CLOUD.md  OPS-LOCAL.md  README.md  RELEASE_NOTES.md  SECURITY.md  UPGRADE_NOTES.md  alembic.ini  docker-compose.cloud.yml  docker-compose.test.yml  docker-compose.yml  fix_again.py  fix_keys.py  fix_padding.py  openapi.json  pyproject.toml  railway.toml  services-spec.md
.github/workflows/: authentication-build-push.yml  authentication-ci.yml  authentication-deploy-dev.yml
infra/tofu/: .gitignore  README.md
infra/tofu/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
infra/tofu/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/tofu/envs/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/tofu/envs/staging/: main.tf  terraform.tfvars.example  variables.tf
infra/tofu/modules/auth-service/: container.tf  deploy.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
policies/: policy.cedar
scripts/: setup-env.py  setup-env.sh
src/: app.py  config.py  env.py  extensions.py  gunicorn.py  logging_config.py  main.py
src/authorization/: __init__.py  entities.py
src/bootstrap/: capabilities.py  extensions.py  logging.py  version.py
src/db/: engine.py
src/db/migrations/: bootstrap_credentials.py  env.py
src/db/migrations/versions/: 000_init_audit.py  000_init_db.py  001_machine_credentials.py  001_services.py  002_seed_authentication_service.py  002_seed_test_service.py  003_add_users_and_tenants.py  004_register_user_service.py  005_user_service_base_url.py
src/models/: __init__.py  audit_mixin.py  machine_credential.py  service.py  service_credential.py  tenant.py  user.py
src/routes/: api.py  auth.py  health.py  idp.py  openapi.py  profile.py  services.py  tenants.py  token.py  ui.py
src/services/: cookies.py  identity.py  idp_observability.py  jwks.py  machine_svc.py  profile_service.py  service_management.py  service_service.py  service_tokens.py  tenant_management.py  tenant_types.py  token_claims.py  token_issuer.py  tokens.py  user_provisioning.py  workos_bridge.py
src/services/idp/: __init__.py  base.py  workos.py
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  docker-compose.test.env.sample
tests/contract/: conftest.py  test_api_contract.py  test_openapi_spec.py
tests/integration/: conftest.py  test_api_contracts.py  test_api_token.py  test_auth_oauth.py  test_container.py
tests/integration/routes/: test_auth.py  test_health.py  test_openapi.py  test_profile.py  test_services.py  test_tenants.py  test_token.py
tests/unit/: conftest.py  test_api_routes.py  test_config.py  test_machine_svc.py  test_token_issuer.py
tests/unit/authorization/: test_entities.py
tests/unit/db/: test_bootstrap_credentials.py
tests/unit/routes/: test_auth.py  test_health.py  test_idp.py  test_profile.py  test_services.py  test_tenants.py  test_token.py
tests/unit/services/: test_identity.py  test_idp_observability.py  test_idp_workos_events.py  test_service_management.py  test_service_tokens.py  test_tenant_management.py  test_tenant_types.py  test_token_claims.py  test_user_provisioning.py  test_workos_bridge.py
