[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authentication"
version = "0.10.0"
description = "Neosofia Authentication Service — token issuance and introspection"
requires-python = ">=3.13"
authors = [{ name = "Neosofia", email = "platform@neosofia.com" }]

dependencies = [
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "flask-wtf>=1.2.0",
    "flask-talisman>=1.1.0",
    "workos>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pyjwt[cryptography]>=2.8.0",
    "bcrypt>=4.1.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "logenvelope",
    "gunicorn>=21.2.0",
    "urllib3>=2.7.0",
]

[tool.uv.sources]
logenvelope = { url = "https://github.com/Neosofia/sdk/releases/download/logenvelope-0.2.0/logenvelope-0.2.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "testcontainers>=3.7.0",
    "respx>=0.21.0",
    "moto>=4.2.0",
    "requests>=2.33.0",
    "jsonschema>=4.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib --cov=src --cov-report=term-missing --cov-fail-under=90"
markers = [
    "unit: pure function tests, zero I/O",
    "integration: Flask test client with mocked external dependencies",
    "contract: API response shape, claim structure, logging schema",
]

[tool.coverage.run]
omit = ["*/migrations/*", "src/routes/ui.py", "src/gunicorn.py", "src/config.py", "src/gunicorn*.py"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
